Fix: The icon of the permalink button should have the right size on iOS

--- a/puppetplays-web/components/Work/workSummary.module.scss
+++ b/puppetplays-web/components/Work/workSummary.module.scss
@@ -121,6 +121,7 @@
     flex: 1 1 auto;
     width: 24px;
     min-width: 24px;
+    padding: 0;
     height: 24px;
     border-radius: 12px;
     margin-right: 6px;
